# Omega3D-engine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.cmake  CMakeLists.txt  CMakeSettings.json  MoltenVK-Setup.sh  Project1.sln  README.md
Examples/: CMakeLists.txt
Examples/Application/: Application.cpp  Application.h  Light.cpp  Light.h
Examples/Scene/: main.cpp
Libs/ImageUtils/: CMakeLists.txt  CubeImage.cpp  CubeImage.h  IblUtils.h  Image2D.cpp  Image2D.h  ImageLoader.cpp  ImageLoader.h  KtxParser.cpp  KtxParser.h  MappedTexture.cpp  MappedTexture.h
Libs/ModelImporter/: AnimInstance.cpp  AnimInstance.h  CMakeLists.txt  MaterialInstance.cpp  MaterialInstance.h  MeshInstance.cpp  MeshInstance.h  NodeInstance.cpp  NodeInstance.h  SkinInstance.cpp  SkinInstance.h
Libs/OEMaths/: CMakeLists.txt  OEMaths.h  OEMaths_Mat2.h  OEMaths_Mat3.h  OEMaths_Mat4.h  OEMaths_MatN.h  OEMaths_Quat.h  OEMaths_Vec2.h  OEMaths_Vec3.h  OEMaths_Vec4.h  OEMaths_VecN.h  OEMaths_transform.cpp  OEMaths_transform.h
Libs/Threading/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  ThreadUtil.cpp  ThreadUtil.h  ThreadedQueue.h
Libs/utility/: AlignedAlloc.h  BVH.cpp  BVH.hpp  BitsetEnum.h  CMakeLists.txt  CString.cpp  CString.h  Compiler.h  DebugAssert.h  EventManager.cpp  EventManager.h  FileUtil.cpp  FileUtil.h  GeneralUtil.cpp  GeneralUtil.h  Logger.h  MurmurHash.cpp  MurmurHash.h  RandomNumber.cpp  RandomNumber.h  Timer.h  result.h
Omega-Engine/: CMakeLists.txt
OmegaEngine/: CMakeLists.txt  OmegaEngine.vcxproj  OmegaEngine.vcxproj.filters  Omega_Common.h  SceneExample.cpp  SimpleExample.cpp  main.cpp
OmegaEngine/AssetInterface/: AssetManager.cpp  AssetManager.h  MappedTexture.cpp  MappedTexture.h
OmegaEngine/Components/: AnimationManager.cpp  AnimationManager.h  CameraManager.h  ComponentManager.h  LightManager.cpp  LightManager.h  MaterialManager.h  RenderableManager.cpp  RenderableManager.h  TransformManager.cpp  TransformManager.h
OmegaEngine/Core/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  Frustum.cpp  Frustum.h  ModelGraph.cpp  ObjectManager.cpp  ObjectManager.h  Omega_Common.h  Omega_Config.h  Omega_Global.cpp  Omega_SceneParser.cpp  Omega_SceneParser.h  Scene.cpp  Scene.h  World.cpp  World.h  engine.cpp  engine.h
OmegaEngine/Engine/: Omega_Config.h  Omega_Global.cpp  Omega_Global.h  Omega_SceneParser.cpp  Omega_SceneParser.h  World.cpp  World.h  engine.cpp  engine.h
OmegaEngine/Examples/: CMakeLists.txt
OmegaEngine/Image/: KtxReader.cpp  KtxReader.h
OmegaEngine/ImageUtils/: ._CubeImage.h  CubeImage.cpp  CubeImage.h  IblUtils.h  Image2D.h  ImageLoader.cpp  ImageLoader.h  KtxParser.cpp  KtxParser.h
OmegaEngine/Managers/: AnimationManager.cpp  AnimationManager.h  AssetManager.cpp  AssetManager.h  CameraManager.cpp  CameraManager.h  ComponentInterface.cpp  ComponentInterface.h  EventManager.cpp  EventManager.h  InputManager.cpp  InputManager.h  LightManager.cpp  LightManager.h  ManagerBase.h  MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h  ObjectManager.cpp  ObjectManager.h  TextureManager.cpp  TextureManager.h  TransformManager.cpp  TransformManager.h
OmegaEngine/Models/: AnimInstance.cpp  AnimInstance.h  GltfModel.cpp  GltfModel.h  MappedTexture.cpp  MappedTexture.h  MaterialInstance.cpp  MaterialInstance.h  MeshInstance.cpp  MeshInstance.h  ModelAnimation.cpp  ModelAnimation.h  ModelImage.cpp  ModelImage.h  ModelMaterial.cpp  ModelMaterial.h  ModelMesh.cpp  ModelMesh.h  ModelNode.cpp  ModelNode.h  ModelSkin.cpp  ModelSkin.h  ModelTransform.cpp  ModelTransform.h  NodeInstance.cpp  NodeInstance.h  OEMaterials.h  OEModels.cpp  OEModels.h  SkinInstance.cpp  SkinInstance.h
OmegaEngine/OEMaths/: OEMaths.cpp  OEMaths.h  OEMaths_Mat2.cpp  OEMaths_Mat2.h  OEMaths_Mat3.cpp  OEMaths_Mat3.h  OEMaths_Mat4.cpp  OEMaths_Mat4.h  OEMaths_MatN.h  OEMaths_Quat.h  OEMaths_Vec2.cpp  OEMaths_Vec2.h  OEMaths_Vec3.cpp  OEMaths_Vec3.h  OEMaths_Vec4.cpp  OEMaths_Vec4.h  OEMaths_VecN.h  OEMaths_convert.cpp  OEMaths_convert.h  OEMaths_quat.cpp  OEMaths_transform.cpp  OEMaths_transform.h
OmegaEngine/ObjectInterface/: ComponentInterface.cpp  ComponentInterface.h  ComponentTypes.h  Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
OmegaEngine/Objects/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h  ObjectTypes.h
OmegaEngine/PostProcess/: PostProcessInterface.cpp  PostProcessInterface.h
OmegaEngine/RenderGraph/: RenderGraph.cpp  RenderGraph.h  Resources.cpp  Resources.h
OmegaEngine/Rendering/: CompositionPass.cpp  CompositionPass.h  DeferredRenderer.cpp  DeferredRenderer.h  GBufferFillPass.cpp  GBufferFillPass.h  IblImage.cpp  IblImage.h  IblInterface.cpp  IblInterface.h  IndirectLighting.cpp  LightingPass.cpp  LightingPass.h  ObjectRenderer.cpp  ObjectRenderer.h  ProgramStateManager.cpp  ProgramStateManager.h  RenderCommon.cpp  RenderCommon.h  RenderConfig.cpp  RenderConfig.h  RenderInterface.cpp  RenderInterface.h  RenderManager.cpp  RenderManager.h  RenderQueue.cpp  RenderQueue.h  RenderUtil.cpp  RenderUtil.h  Renderer.cpp  Renderer.h  Shadow.cpp  Shadow.h  Skybox.cpp  Skybox.h  SkyboxPass.cpp  SkyboxPass.h  StockModels.cpp  StockModels.h
OmegaEngine/Resource/: ImageParser.cpp  ImageParser.h  ResourceManager.cpp  ResourceManager.h
OmegaEngine/Scripting/: LuaBinder.cpp  LuaBinder.h  OEConfig.cpp  OEConfig.h
OmegaEngine/Threading/: ThreadPool.cpp  ThreadPool.h  ThreadUtil.cpp  ThreadUtil.h  ThreadedQueue.h
OmegaEngine/Types/: ._UBufferInfo.h  AABox.h  ComponentTypes.h  GpuResources.h  MappedTexture.cpp  MappedTexture.h  Material.cpp  Material.h  MaterialInfo.cpp  MaterialInfo.h  NativeWindowWrapper.h  Object.cpp  Object.h  PBuildInfo.h  PStateInfo.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  TextureInfo.h  UBufferInfo.h
OmegaEngine/Vulkan/: Buffer.h  BufferManager.cpp  BufferManager.h  CommandBuffer.cpp  CommandBuffer.h  CommandBufferManager.cpp  CommandBufferManager.h  Common.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  Image.cpp  Image.h  Interface.cpp  Interface.h  (+20 more)
Source/: CMakeLists.txt
(+960 files in other folders)
